<resources>
    <string name="app_name">MEME_Soundboard</string>
    <string name="yeet">YEET</string>
    <string name="johnCena">JOHN CENA</string>
    <string name="baby">BABY COME BACK</string>
    <string name="illuminatii">Illuminatii</string>
    <string name="nani">NANI</string>
    <string name="running">RUNNING?!</string>
    <string name="milk">Milk</string>
    <string name="yah">YAH</string>
    <string name="logo">TODO</string>
</resources>
