<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="387dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/yeet"
            android:textColor="@color/white"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:text="@string/johnCena"
            android:textColor="@color/darkGrey"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/baby"
            android:textColor="@color/white"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:text="@string/illuminatii"
            android:textColor="@color/white"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:text="@string/nani"
            android:textColor="@color/white"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/darkBlue"
            android:text="@string/running"
            android:textColor="@color/white"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:text="@string/milk"
            android:textColor="@color/white"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@color/lime"
            android:text="@string/yah"
            android:textColor="@color/white"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1"/>

    </android.support.v7.widget.GridLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/memesoundboardlogo"/>
</android.support.constraint.ConstraintLayout>